--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "personal-website",
+  "name": "katie-wiessfelt",
+  "homepage": "https://katiewiessfelt.github.io/portfolio",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
   },
   "description": "",
   "devDependencies": {
-    "bootstrap": "^5.3.8"
+    "bootstrap": "^5.3.8",
+    "gh-pages": "^6.3.0"
   }
 }
